<?xml version="1.0"?>
<package format="2">
  <name>adamr2</name>
  <version>0.0.0</version>
  <description>The adamr2 metapackage</description>

  <maintainer email="a19613@g.ichinoseki.ac.jp">fjnkt98</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>adamr2_bringup</depend>
  <depend>adamr2_description</depend>
  <depend>adamr2_control</depend>
  <depend>adamr2_driver</depend>

  <export>
    <metapackage/>
  </export>
</package>
