<?xml version="1.0"?>
<package format="2">
  <name>adamr2_bringup</name>
  <version>0.0.0</version>
  <description>The adamr2_bringup package</description>

  <maintainer email="a19613@g.ichinoseki.ac.jp">fjnkt98</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <!--<exec_depend>adamr2_control</exec_depend>-->
</package>
