<?xml version="1.0"?>
<package format="2">
  <name>adamr2_control</name>
  <version>0.0.0</version>
  <description>The adamr2_control package</description>

  <maintainer email="a19613@g.ichinoseki.ac.jp">fjnkt98</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>adamr2_driver</exec_depend>
</package>