<?xml version="1.0"?>
<package format="2">
  <name>adamr2_navigation</name>
  <version>0.0.0</version>
  <description>The adamr2_navigation package</description>

  <maintainer email="a19613@g.ichinoseki.ac.jp">fjnkt98</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
</package>
