<?xml version="1.0"?>
<package format="2">
  <name>adamr2_slam</name>
  <version>0.0.0</version>
  <description>The adamr2_slam package</description>

  <maintainer email="a19613@g.ichinoseki.ac.jp">fjnkt98</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gmapping</exec_depend>
</package>
